log
Sun Apr 10 23:53:29 UTC 2022: 
 hashmap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:4:0:
hashmap.c:67:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
d744a37
Sun Apr 10 23:55:04 UTC 2022: 
In file included from test.c:4:0:
hashmap.c:67:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
eacc0ac
Sun Apr 10 23:55:27 UTC 2022: 
In file included from test.c:4:0:
hashmap.c:67:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
771385b
Sun Apr 10 23:56:31 UTC 2022: 
In file included from test.c:4:0:
hashmap.c:67:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
f2ad246
Sun Apr 10 23:56:44 UTC 2022: 
In file included from test.c:4:0:
hashmap.c:67:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
948a9ac
Sun Apr 10 23:57:38 UTC 2022: 
In file included from test.c:4:0:
hashmap.c:67:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
87bb191
Sun Apr 10 23:59:39 UTC 2022: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
d6eec9a
Mon Apr 11 00:00:26 UTC 2022: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|0
077132f
Mon Apr 11 00:01:16 UTC 2022: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
836c947
Mon Apr 11 00:03:41 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8b29757
Mon Apr 11 00:09:40 UTC 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
6ae2d69
Mon Apr 11 00:15:21 UTC 2022: 
 hashmap.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  0|0
a6bf490
Mon Apr 11 00:39:33 UTC 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
12e71c0
Mon Apr 11 00:47:02 UTC 2022: 
 hashmap.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:110:34: error: expected ‘)’ before ‘{’ token
     if (position >= map->capacity{
                                  ^
hashmap.c:114:3: error: expected expression before ‘}’ token
   }
   ^
hashmap.c:115:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
7b9de9e
Mon Apr 11 00:47:32 UTC 2022: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:114:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
569aa50
Mon Apr 11 00:48:48 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:114:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
65b0441
